--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ body {
   font-size: 80px;
   line-height: 195%;
   text-transform: uppercase;
-  color: #ffffff00;
+  color: #f70707de;
   position: relative;
   z-index: 2;
 }
@@ -192,11 +192,24 @@ body {
   .title span {
     font-size: 60px;
   }
+  .title::before {
+    top: 20px;
+  }
 }
 
 @media (max-width: 769px) {
   .title {
     font-size: 50px;
+  }
+  .title p {
+    font-size: 180px;
+    top: 50px;
+  }
+  .title span {
+    font-size: 50px;
+  }
+  .title::before {
+    top: 10px;
   }
 }
 
@@ -204,11 +217,28 @@ body {
   .title {
     font-size: 40px;
   }
+  .title p {
+    font-size: 150px;
+  }
+  .title span {
+    font-size: 40px;
+  }
 }
 
 @media (max-width: 426px) {
   .title {
-    font-size: 25px;
+    font-size: 30px;
+  }
+  .title p {
+    font-size: 100px;
+    top: 30px;
+  }
+  .title span {
+    font-size: 30px;
+  }
+  .title::before {
+    width: 60px;
+    top: 5px;
   }
 }
 
@@ -240,7 +270,7 @@ body {
 
 @media (max-width: 426px) {
   .small-title {
-    font-size: 15px;
+    font-size: 14px;
   }
 }
 
@@ -279,19 +309,114 @@ body {
   }
 }
 
-@media (max-width: 426px) {
+@media (max-width: 661px) {
   .sub-title {
-    font-size: 15px;
+    font-size: 14px;
   }
   .sub-title::before {
-    content: "";
-    background: #FFFFFF;
-    opacity: 0.5;
-    width: 40px;
-    height: 1px;
-    position: absolute;
+    width: 50px;
+    top: 50%;
+    left: -60px;
+  }
+}
+
+@media (max-width: 426px) {
+  .sub-title {
+    font-size: 9px;
+  }
+  .sub-title::before {
+    width: 30px;
     top: 50%;
     left: -50px;
+  }
+}
+
+.button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.button__btn-left {
+  padding: 9%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.button__btn-left::before {
+  content: "";
+  position: absolute;
+  top: 45%;
+  right: -10px;
+  width: 20px;
+  height: 1px;
+  background-color: #fff;
+}
+
+@media (max-width: 1025px) {
+  .button__btn-left::before {
+    right: -7.5px;
+    width: 15px;
+  }
+}
+
+@media (max-width: 769px) {
+  .button__btn-left::before {
+    right: -5px;
+    width: 10px;
+  }
+}
+
+.button__btn-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 9%;
+  background-color: #4AF6CD;
+}
+
+.button__btn-text {
+  margin: 0px 10% 0px 0px;
+}
+
+.button-text {
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 90%;
+  text-align: right;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+@media (max-width: 1441px) {
+  .button-text {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .button-text {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 769px) {
+  .button-text {
+    font-size: 20px;
   }
 }
 
@@ -1392,6 +1517,24 @@ body {
   padding: 127px 0px 0px 0px;
 }
 
+@media (max-width: 1025px) {
+  .surf__body {
+    padding: 80px 0px 0px 0px;
+  }
+}
+
+@media (max-width: 769px) {
+  .surf__body {
+    padding: 50px 0px 0px 0px;
+  }
+}
+
+@media (max-width: 426px) {
+  .surf__body {
+    padding: 20px 0px 0px 0px;
+  }
+}
+
 .surf__head {
   -ms-flex-item-align: start;
       -ms-grid-row-align: start;
@@ -1399,8 +1542,32 @@ body {
   margin: 0px 0px 28px 0px;
 }
 
+@media (max-width: 426px) {
+  .surf__head {
+    margin: 0px 0px 10px 0px;
+  }
+}
+
 .surf__title {
   margin: 0px 0px 0px 294px;
+}
+
+@media (max-width: 1025px) {
+  .surf__title {
+    margin: 0px 0px 0px 194px;
+  }
+}
+
+@media (max-width: 769px) {
+  .surf__title {
+    margin: 0px 0px 0px 94px;
+  }
+}
+
+@media (max-width: 426px) {
+  .surf__title {
+    margin: 0px 0px 0px 50px;
+  }
 }
 
 .surf__world {
@@ -1408,17 +1575,42 @@ body {
       align-content: stretch;
   position: relative;
   padding: 0px 70px;
-  margin: 0px 0px 211px 0px;
+  margin: 0px 0px 60px 0px;
 }
 
-.surf__world-map {
-  position: absolute;
-  left: 0;
-  top: 0;
+@media (max-width: 1025px) {
+  .surf__world {
+    padding: 0px 60px;
+    margin: 0px 0px 50px 0px;
+  }
 }
 
-.surf__world-map img {
-  width: 100%;
+@media (max-width: 769px) {
+  .surf__world {
+    margin: 0px 0px 30px 0px;
+  }
+}
+
+@media (max-width: 426px) {
+  .surf__world {
+    margin: 0px 0px 10px 0px;
+  }
+}
+
+.surf__box-world {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
 }
 
 .world-box__head {
@@ -1432,8 +1624,30 @@ body {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: end;
-  margin: 0px 0px 197px 0px;
   position: relative;
+}
+
+@media (max-width: 769px) {
+  .world-box__head {
+    margin: 0px 0px 30px 0px;
+  }
+}
+
+@media (max-width: 660px) {
+  .world-box__head {
+    margin: 0px 0px 70px 0px;
+  }
+}
+
+@media (max-width: 426px) {
+  .world-box__head {
+    margin: 0px 0px 85px 0px;
+  }
+}
+
+.world-box__cards {
+  height: 100%;
+  width: 100%;
 }
 
 .card-slider__box {
@@ -1443,17 +1657,43 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
   position: relative;
 }
 
+.card-slider__world-map {
+  width: 100%;
+  height: 100%;
+}
+
+.card-slider__world-map img {
+  width: 100%;
+  height: 100%;
+}
+
+.card-slider__lable {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+}
+
 .card-slider__lable-box {
-  background: #0f1010c7;
+  background: #0f1010e8;
   border-radius: 6px;
   padding: 34px;
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1467,6 +1707,170 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
+  margin: 0px 0px 10px 0px;
+  position: relative;
+  opacity: 0;
+}
+
+@media (max-width: 1125px) {
+  .card-slider__lable-box {
+    padding: 20px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .card-slider__lable-box {
+    padding: 15px;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__lable-box {
+    padding: 10px;
+  }
+}
+
+.card-slider__lable-box-active {
+  opacity: 1;
+}
+
+.card-slider #airlie {
+  left: 87%;
+  top: 75%;
+}
+
+.card-slider #arica {
+  left: 25%;
+  top: 75%;
+}
+
+.card-slider #vieux {
+  left: 47%;
+  top: 40%;
+}
+
+.card-slider #kansai {
+  left: 84%;
+  top: 45%;
+}
+
+.card-slider #malibu {
+  left: 10%;
+  top: 40%;
+}
+
+.card-slider__pointer {
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #4af6ce42;
+}
+
+@media (max-width: 1025px) {
+  .card-slider__pointer {
+    width: 18px;
+    height: 18px;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__pointer {
+    width: 15px;
+    height: 15px;
+  }
+}
+
+@media (max-width: 661px) {
+  .card-slider__pointer {
+    width: 10px;
+    height: 10px;
+  }
+}
+
+.card-slider__pointer-active {
+  background-color: #4AF6CD;
+  -webkit-box-shadow: 0px 0px 35px rgba(74, 246, 205, 0.837777);
+          box-shadow: 0px 0px 35px rgba(74, 246, 205, 0.837777);
+}
+
+.card-slider__pointer-box {
+  position: absolute;
+  left: -550%;
+  bottom: 100%;
+  z-index: 10;
+}
+
+@media (max-width: 1125px) {
+  .card-slider__pointer-box {
+    left: -450%;
+  }
+}
+
+@media (max-width: 1025px) {
+  .card-slider__pointer-box {
+    left: -440%;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__pointer-box {
+    left: -430%;
+  }
+}
+
+@media (max-width: 661px) {
+  .card-slider__pointer-box {
+    left: -700%;
+  }
+}
+
+.card-slider__coordinates {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  white-space: nowrap;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  position: absolute;
+  right: -5%;
+  top: 0;
+  -webkit-transform-origin: top right;
+          transform-origin: top right;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
+@media (max-width: 1125px) {
+  .card-slider__coordinates {
+    font-size: 13px;
+    letter-spacing: 7px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .card-slider__coordinates {
+    font-size: 12px;
+    letter-spacing: 4px;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__coordinates {
+    font-size: 10px;
+    letter-spacing: 2px;
+  }
+}
+
+@media (max-width: 661px) {
+  .card-slider__coordinates {
+    letter-spacing: 1px;
+  }
 }
 
 .card-slider__name-beach {
@@ -1489,6 +1893,37 @@ body {
   left: 0;
 }
 
+@media (max-width: 1125px) {
+  .card-slider__name-beach {
+    font-size: 16px;
+    margin: 0px 0px 15px 0px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .card-slider__name-beach {
+    font-size: 14px;
+    margin: 0px 0px 10px 0px;
+  }
+  .card-slider__name-beach::before {
+    width: 60px;
+    top: 20px;
+    left: 0;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__name-beach {
+    font-size: 12px;
+    margin: 0px 0px 5px 0px;
+  }
+  .card-slider__name-beach::before {
+    width: 60px;
+    top: 15px;
+    left: 0;
+  }
+}
+
 .card-slider__country {
   font-weight: 400;
   font-size: 16px;
@@ -1497,11 +1932,48 @@ body {
   margin: 0px 0px 30px 0px;
 }
 
+@media (max-width: 1125px) {
+  .card-slider__country {
+    font-size: 14px;
+    margin: 0px 0px 20px 0px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .card-slider__country {
+    margin: 0px 0px 10px 0px;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__country {
+    margin: 0px 0px 5px 0px;
+  }
+}
+
 .card-slider__weather-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin: 0px -27.5px;
+}
+
+@media (max-width: 1125px) {
+  .card-slider__weather-box {
+    margin: 0px -20px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .card-slider__weather-box {
+    margin: 0px -10px;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__weather-box {
+    margin: 0px -5px;
+  }
 }
 
 .card-slider__column {
@@ -1513,6 +1985,40 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 1125px) {
+  .card-slider__column {
+    padding: 0px 20px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .card-slider__column {
+    padding: 0px 10px;
+  }
+}
+
+@media (max-width: 769px) {
+  .card-slider__column {
+    padding: 0px 5px;
+  }
+}
+
+.weather-info__icon {
+  margin: 0px 0px 4px 0px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1521,30 +2027,20 @@ body {
           align-items: center;
 }
 
-.card-slider__arrow-right {
-  position: absolute;
-  top: 30px;
-  right: 30px;
+.weather-info__icon img {
+  width: 100%;
 }
 
-.card-slider__coordinates {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: right;
-  letter-spacing: 8px;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  position: absolute;
-  right: -185px;
-  top: 50%;
-  -webkit-transform: translate(0px, -50%) rotate(-90deg);
-          transform: translate(0px, -50%) rotate(-90deg);
+@media (max-width: 769px) {
+  .weather-info__icon img {
+    width: 80%;
+  }
 }
 
-.weather-info__icon {
-  margin: 0px 0px 4px 0px;
+@media (max-width: 661px) {
+  .weather-info__icon img {
+    width: 60%;
+  }
 }
 
 .weather-info__indicators {
@@ -1554,6 +2050,14 @@ body {
   text-align: center;
   color: #FFFFFF;
   margin: 0px 0px 9px 0px;
+  white-space: nowrap;
+}
+
+@media (max-width: 769px) {
+  .weather-info__indicators {
+    font-size: 14px;
+    margin: 0px 0px 5px 0px;
+  }
 }
 
 .weather-info__name {
@@ -1570,6 +2074,12 @@ body {
   overflow: hidden;
 }
 
+@media (max-width: 769px) {
+  .beach-slider__box {
+    padding: 50px 0px 100px 0px;
+  }
+}
+
 .beach-slider__slider {
   position: relative;
 }
@@ -1577,18 +2087,23 @@ body {
 .beach-slider__line {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[5];
-      grid-template-columns: repeat(5, 1fr);
+  -ms-grid-columns: (26%)[6];
+      grid-template-columns: repeat(6, 26%);
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
 }
 
 .beach-slider__slide {
   position: relative;
+  width: 100%;
 }
 
 .beach-slider__slide-active {
   z-index: 20;
+}
+
+.beach-slider__image img {
+  width: 100%;
 }
 
 .beach-slider__cover {
@@ -1604,30 +2119,80 @@ body {
   background-color: #0000002f;
 }
 
+.beach-slider__btn {
+  opacity: 0;
+}
+
+.beach-slider__btn-active {
+  z-index: 20;
+  position: absolute;
+  left: 5%;
+  bottom: 0;
+  opacity: 1;
+  cursor: pointer;
+}
+
+@media (max-width: 769px) {
+  .beach-slider__btn-active {
+    bottom: -55px;
+  }
+}
+
 .beach-slider__name {
   position: absolute;
-  top: 10%;
-  left: 10%;
-  font-weight: 800;
-  font-size: 40px;
+  top: 7%;
+  left: 15%;
   line-height: 90%;
-  text-transform: uppercase;
-  color: #FFFFFF;
 }
 
 .beach-slider__place {
   position: absolute;
-  bottom: 35%;
-  left: -25%;
+  bottom: 50px;
+  left: 0px;
   font-weight: 400;
   font-size: 18px;
   line-height: 122.22%;
-  letter-spacing: 8px;
+  letter-spacing: 7px;
   text-transform: uppercase;
   color: #FFFFFF;
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
+  white-space: nowrap;
+  -webkit-transform-origin: 0px 0px;
+          transform-origin: 0px 0px;
+  -webkit-transform: translate(10%, 80%) rotate(-90deg);
+          transform: translate(10%, 80%) rotate(-90deg);
   padding: 5px;
+}
+
+@media (max-width: 1025px) {
+  .beach-slider__place {
+    font-size: 16px;
+    letter-spacing: 5px;
+    -webkit-transform: translate(10%, 70%) rotate(-90deg);
+            transform: translate(10%, 70%) rotate(-90deg);
+  }
+}
+
+@media (max-width: 769px) {
+  .beach-slider__place {
+    bottom: 0px;
+    font-size: 14px;
+    letter-spacing: 3px;
+  }
+}
+
+@media (max-width: 661px) {
+  .beach-slider__place {
+    font-size: 12px;
+    letter-spacing: 0px;
+    -webkit-transform: translate(10%, 90%) rotate(-90deg);
+            transform: translate(10%, 90%) rotate(-90deg);
+  }
+}
+
+@media (max-width: 426px) {
+  .beach-slider__place {
+    font-size: 9px;
+  }
 }
 
 .beach-slider__arrows {
@@ -1643,15 +2208,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.beach-slider__left-arrow {
-  margin: 0px 20px 0px 0px;
+  cursor: pointer;
 }
 
 .beach-slider__right-arrow {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+  margin: 0px 40px 0px 0px;
 }
 
 #beach-1 {
@@ -1659,9 +2222,37 @@ body {
           transform: translate(0px, 10px) scaleX(1.1);
 }
 
+@media (max-width: 1025px) {
+  #beach-1 {
+    -webkit-transform: translate(0px, 5px) scaleX(1.05);
+            transform: translate(0px, 5px) scaleX(1.05);
+  }
+}
+
+@media (max-width: 661px) {
+  #beach-1 {
+    -webkit-transform: translate(0px, 2px) scaleX(1.05);
+            transform: translate(0px, 2px) scaleX(1.05);
+  }
+}
+
 #beach-2 {
   -webkit-transform: translate(0px, 30px) scaleX(1.1);
           transform: translate(0px, 30px) scaleX(1.1);
+}
+
+@media (max-width: 1025px) {
+  #beach-2 {
+    -webkit-transform: translate(0px, 20px) scaleX(1.05);
+            transform: translate(0px, 20px) scaleX(1.05);
+  }
+}
+
+@media (max-width: 661px) {
+  #beach-2 {
+    -webkit-transform: translate(0px, 10px) scaleX(1.05);
+            transform: translate(0px, 10px) scaleX(1.05);
+  }
 }
 
 #beach-3 {
@@ -1669,9 +2260,37 @@ body {
           transform: translate(0px, 0px) scaleX(1.1);
 }
 
+@media (max-width: 1025px) {
+  #beach-3 {
+    -webkit-transform: translate(0px, 0px) scaleX(1.05);
+            transform: translate(0px, 0px) scaleX(1.05);
+  }
+}
+
+@media (max-width: 661px) {
+  #beach-3 {
+    -webkit-transform: translate(0px, 0px) scaleX(1.05);
+            transform: translate(0px, 0px) scaleX(1.05);
+  }
+}
+
 #beach-4 {
   -webkit-transform: translate(0px, 30px) scaleX(1.1);
           transform: translate(0px, 30px) scaleX(1.1);
+}
+
+@media (max-width: 1025px) {
+  #beach-4 {
+    -webkit-transform: translate(0px, 20px) scaleX(1.05);
+            transform: translate(0px, 20px) scaleX(1.05);
+  }
+}
+
+@media (max-width: 661px) {
+  #beach-4 {
+    -webkit-transform: translate(0px, 10px) scaleX(1.05);
+            transform: translate(0px, 10px) scaleX(1.05);
+  }
 }
 
 #beach-5 {
@@ -1679,93 +2298,16 @@ body {
           transform: translate(0px, 0px) scaleX(1.1);
 }
 
-.test__body {
-  background-color: #ff8c8c;
-  padding: 50px 25px;
-  overflow: hidden;
+@media (max-width: 1025px) {
+  #beach-5 {
+    -webkit-transform: translate(0px, 0px) scaleX(1.05);
+            transform: translate(0px, 0px) scaleX(1.05);
+  }
 }
 
-.test__btn button {
-  width: 150px;
-  height: 70px;
-  background-color: #1a0d0d;
-  color: #fff;
-  font-size: 36px;
-}
-
-.test__slider {
-  background-color: #efff94;
-  padding: 50px;
-  width: 1400px;
-  margin: 0px 0px 20px 0px;
-}
-
-.test__slider-line {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[6];
-      grid-template-columns: repeat(6, 1fr);
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-  -webkit-column-gap: 50px;
-          column-gap: 50px;
-}
-
-.test__slider-line img {
-  width: 400px;
-  height: 200px;
-}
-
-.test__image {
-  position: relative;
-}
-
-.test__cover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(ellipse at center, rgba(125, 126, 125, 0.3) 0%, rgba(110, 111, 110, 0.3) 8%, rgba(24, 24, 24, 0.9) 54%, rgba(0, 0, 0, 0.9) 67%, rgba(0, 0, 0, 0.9) 100%);
-}
-
-.test__cover-active {
-  display: none;
-}
-
-.active {
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-}
-
-#img1 {
-  -webkit-transform: translate(0px, 20px);
-          transform: translate(0px, 20px);
-}
-
-#img2 {
-  -webkit-transform: translate(0px, 25px);
-          transform: translate(0px, 25px);
-}
-
-#img3 {
-  -webkit-transform: translate(0px, 15px);
-          transform: translate(0px, 15px);
-}
-
-#img4 {
-  -webkit-transform: translate(0px, 10px);
-          transform: translate(0px, 10px);
-}
-
-#img5 {
-  -webkit-transform: translate(0px, 40px);
-          transform: translate(0px, 40px);
-}
-
-#img6 {
-  -webkit-transform: translate(0px, 30px);
-          transform: translate(0px, 30px);
+@media (max-width: 661px) {
+  #beach-5 {
+    -webkit-transform: translate(0px, 0px) scaleX(1.05);
+            transform: translate(0px, 0px) scaleX(1.05);
+  }
 }
